[package]
name = "koii-token-generator"
version = "0.1.0"
edition = "2021"

[lib]
name = "token_generator"
path = "src/lib/token_generator.rs"

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1", features = ["full"] }