[package]
name = "koii-token-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[lib]
path = "src/lib/mod.rs"

[[test]]
name = "error_handling_tests"
path = "tests/error_handling_tests.rs"

[[test]]
name = "token_generator_tests"
path = "tests/token_generator.rs"

[[test]]
name = "token_generator_unit_tests"
path = "tests/token_generator.test.rs"